--- a/layouts/chrome/header.html
+++ b/layouts/chrome/header.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="{{ .Permalink }}">
 
     <!-- atom & rss feed -->
-    <link href="/rss.xml" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">    
+    <link href="{{ .RSSLink }}" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">    
 
   </head>
   <body>    
