--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="">
     <link rel="canonical" href="{{ .Permalink }}">
     <!-- atom & rss feed -->
-    <link href="/rss.xml" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">    
+    <link href="{{ .RSSlink }}" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">    
   </head>
 
   <body>    
