Added menu support.

--- a/layouts/chrome/menu.html
+++ b/layouts/chrome/menu.html
@@ -6,4 +6,16 @@
 	    </a>
           </div>
   </div>
+  <ul class="menu">
+  {{ range .Site.Menus.main }}
+  <li>
+    <a class="" href="{{.Url}}">
+      {{ .Pre }}
+      <span>{{ .Name }}</span>
+    </a>
+  </li>
+  {{end}}
+</ul>
+<!-- sidebar menu end-->
+    </div>
 </div>
