--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,7 +72,7 @@ footer {
   color: #3F3F3F;
   font-size: 1.8em;
   text-align: center; 
-  margin-bottom: 40px;
+  margin-bottom: 1.4em;
 }
 
 #logo {
@@ -163,7 +163,7 @@ footer {
 .post h2 {
   font-size: 25px;
   line-height: 50px;
-  margin: 25px 0;
+  margin: 1em 0 0.2em 0;
 }
 
 p {
